--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -33,10 +33,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "46ecc046",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'np' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m X = \u001b[43mnp\u001b[49m.array([[\u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m, \u001b[32m3\u001b[39m],\n\u001b[32m      2\u001b[39m               [\u001b[32m4\u001b[39m, \u001b[32m5\u001b[39m, \u001b[32m6\u001b[39m],\n\u001b[32m      3\u001b[39m               [\u001b[32m7\u001b[39m, \u001b[32m8\u001b[39m, \u001b[32m9\u001b[39m]])\n\u001b[32m      5\u001b[39m centroids, labels = kmeans(X, k=\u001b[32m3\u001b[39m)\n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m# centroids[1] --> the centroid for the second cluster\u001b[39;00m\n\u001b[32m      8\u001b[39m \u001b[38;5;66;03m# labels[2] --> the cluster assignment for the third data point\u001b[39;00m\n",
+            "\u001b[31mNameError\u001b[39m: name 'np' is not defined"
+          ]
+        }
+      ],
       "source": [
         "X = np.array([[1, 2, 3],\n",
         "              [4, 5, 6],\n",
@@ -47,6 +59,12 @@
         "# centroids[1] --> the centroid for the second cluster\n",
         "# labels[2] --> the cluster assignment for the third data point"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "487a8e04",
+      "metadata": {},
+      "source": []
     },
     {
       "cell_type": "markdown",
@@ -62,10 +80,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "c5f2c4bd",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'kmeans_diamonds' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[2]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m centroids, labels = \u001b[43mkmeans_diamonds\u001b[49m(n=\u001b[32m1000\u001b[39m, k=\u001b[32m5\u001b[39m)\n\u001b[32m      3\u001b[39m \u001b[38;5;66;03m# centroids[3] --> the centroid for the fourth cluster\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;66;03m# labels[9] --> the cluster assignment for the tenth diamond\u001b[39;00m\n",
+            "\u001b[31mNameError\u001b[39m: name 'kmeans_diamonds' is not defined"
+          ]
+        }
+      ],
       "source": [
         "centroids, labels = kmeans_diamonds(n=1000, k=5)\n",
         "\n",
@@ -119,10 +149,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "id": "79595531",
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'apputil'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[3]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mseaborn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01msns\u001b[39;00m\n\u001b[32m      2\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mmatplotlib\u001b[39;00m\u001b[34;01m.\u001b[39;00m\u001b[34;01mpyplot\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mplt\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mapputil\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m *\n\u001b[32m      6\u001b[39m get_ipython().run_line_magic(\u001b[33m'\u001b[39m\u001b[33mconfig\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m\"\u001b[39m\u001b[33mInlineBackend.figure_formats = [\u001b[39m\u001b[33m'\u001b[39m\u001b[33msvg\u001b[39m\u001b[33m'\u001b[39m\u001b[33m]\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m      7\u001b[39m sns.set_theme(style=\u001b[33m\"\u001b[39m\u001b[33mwhitegrid\u001b[39m\u001b[33m\"\u001b[39m)\n",
+            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'apputil'"
+          ]
+        }
+      ],
       "source": [
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
@@ -234,9 +276,9 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "i501 (pip)",
+      "display_name": "base",
       "language": "python",
-      "name": "i501-pip"
+      "name": "python3"
     },
     "language_info": {
       "codemirror_mode": {
@@ -248,7 +290,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.13"
+      "version": "3.13.5"
     }
   },
   "nbformat": 4,
